# ESP32-S3-EPaper-Player

./: .gitignore  Makefile  README.md
ESP32_EPAPER_PLAYER/: ESP32_EPAPER_PLAYER.ino  default_cover.h  es8311_lib.cpp  es8311_lib.h  font_cubic11_11.c  partitions.csv  snail_icon.h  voice_sr.cpp  voice_sr.h
player_idf/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig.defaults
player_idf/main/: CMakeLists.txt  ES8311.h  app_main.cpp  audio.cpp  audio.h  buttons.cpp  buttons.h  es8311_lib.cpp  font_cubic11_14.c  idf_component.yml  mimi_sprites.h  nvs_state.cpp  nvs_state.h  sdcard.cpp  sdcard.h  sprite_anim.cpp  sprite_anim.h  voice_sr.cpp
